--- a/week5/js-contex/star-ex2-print-name/index.html
+++ b/week5/js-contex/star-ex2-print-name/index.html
@@ -7,6 +7,6 @@
     <title>let-const</title>
 </head>
 <body>
-    <script src="js/let-const.js"></script>
+    <script src="js/print.js"></script>
 </body>
 </html>
