--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>memory-game</title>
 </head>
+
 <body>
+
+    <section class="board" id="board">
+        <div class="header" id="header"></div>
+        <div class="start-container" id="start">
+            <h1>Chooze your level:</h1>
+            <button type="button" class="btn btn-warning" id="easy">Easy</button>
+            <button type="button" class="btn btn-warning" id="medium">Medium</button>
+            <button type="button" class="btn btn-warning" id="hard">Hard</button>
+
+        </div>
+      
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="js/memory.js"></script>
 </body>
+
 </html>
