random picture in card entity

--- a/memoryGame/index.html
+++ b/memoryGame/index.html
@@ -48,7 +48,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
         crossorigin="anonymous"></script>
-    <script src="./js/entities/cell.js"></script>
+    <script src="./js/entities/card.js"></script>
     <script src="./js/entities/board.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/main.js"></script>
