--- a/memoryGame/index.html
+++ b/memoryGame/index.html
@@ -17,28 +17,28 @@
     </div>
     <div class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-md-1"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-1"></div>
+            <div class="col-md-1 col-xs-1"></div>
+            <div class="col-md-2  col-xs-2 card" place="1" id="p1"></div>
+            <div class="col-md-2  col-xs-2 card" place="2" id="p2"></div>
+            <div class="col-md-2 col-xs-2 card" place="3"id="p3"></div>
+            <div class="col-md-2 col-xs-2 card" place="4" id="p4"></div>
+            <div class="col-md-1 col-xs-1"></div>
         </div>
         <div class="row align-items-center">
-                <div class="col-md-1"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-1"></div>
+                <div class="col-md-1 col-xs-1" ></div>
+            <div class="col-md-2  col-xs-2 card"place="5" id="p5"></div>
+            <div class="col-md-2 col-xs-2 card"place="6" id="p6"></div>
+            <div class="col-md-2 col-xs-2 card"place="7" id="p7"></div>
+            <div class="col-md-2 col-xs-2 card"place="8" id="p8"></div>
+            <div class="col-md-1 col-xs-1"></div>
         </div>
         <div class="row align-items-center">
-                <div class="col-md-1"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-2 card"></div>
-            <div class="col-md-1"></div>
+                <div class="col-md-1 col-xs-1" ></div>
+            <div class="col-md-2 col-xs-2 card" place="9" id="p9"></div>
+            <div class="col-md-2  col-xs-2 card" place="10" id="p10"></div>
+            <div class="col-md-2 col-xs-2 card"place="11" id="p11"></div>
+            <div class="col-md-2 col-xs-2 card" place="12" id="p12"></div>
+            <div class="col-md-1 col-xs-1"></div>
         </div>
     </div>
 
