--- a/memory03/index.html
+++ b/memory03/index.html
@@ -72,7 +72,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
         crossorigin="anonymous"></script>
-        <script src="./js/script.js"></script>
+        <script src="js/entities/card.js"></script>
+        <script src="js/entities/board.js"></script>
+        <script src="js/gmae.js"></script>
+        <script src="js/main.js"></script>
+        
   
 
 </html>
