--- a/memoryGame/index.html
+++ b/memoryGame/index.html
@@ -20,43 +20,54 @@
             <div class="col-md-1 col-xs-1"></div>
             <div class="col-md-2  col-xs-2 card" place="1" id="p1"></div>
             <div class="col-md-2  col-xs-2 card" place="2" id="p2"></div>
-            <div class="col-md-2 col-xs-2 card" place="3"id="p3"></div>
+            <div class="col-md-2 col-xs-2 card" place="3" id="p3"></div>
             <div class="col-md-2 col-xs-2 card" place="4" id="p4"></div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
         <div class="row align-items-center">
-                <div class="col-md-1 col-xs-1" ></div>
-            <div class="col-md-2  col-xs-2 card"place="5" id="p5"></div>
-            <div class="col-md-2 col-xs-2 card"place="6" id="p6"></div>
-            <div class="col-md-2 col-xs-2 card"place="7" id="p7"></div>
-            <div class="col-md-2 col-xs-2 card"place="8" id="p8"></div>
+            <div class="col-md-1 col-xs-1"></div>
+            <div class="col-md-2  col-xs-2 card" place="5" id="p5"></div>
+            <div class="col-md-2 col-xs-2 card" place="6" id="p6"></div>
+            <div class="col-md-2 col-xs-2 card" place="7" id="p7"></div>
+            <div class="col-md-2 col-xs-2 card" place="8" id="p8"></div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
         <div class="row align-items-center">
-                <div class="col-md-1 col-xs-1" ></div>
+            <div class="col-md-1 col-xs-1"></div>
             <div class="col-md-2 col-xs-2 card" place="9" id="p9"></div>
             <div class="col-md-2  col-xs-2 card" place="10" id="p10"></div>
-            <div class="col-md-2 col-xs-2 card"place="11" id="p11"></div>
+            <div class="col-md-2 col-xs-2 card" place="11" id="p11"></div>
             <div class="col-md-2 col-xs-2 card" place="12" id="p12"></div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
         <div class="container playAgain">
-            <h1>You Won The  </h1><br><br><br><br>
+            <h1>You Won The </h1><br><br><br><br>
             <button type="button" class="btn btn-secondary">Play Again ?</button>
-                
-        </div>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-        integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-        crossorigin="anonymous"></script>
-    <script src="./js/entities/card.js"></script>
-    <script src="./js/entities/board.js"></script>
-    <script src="./js/game.js"></script>
-    <script src="./js/main.js"></script>
+        </div>
+        <!-- <div id="modal-wrapper" style="display:none;">
+            <div class="modal">
+                <span class="close-btn clickable">X</span>
+                <div class="modal-title">You Won The Game!!</div>
+                <div class="modal-content">Do you wnmt to play again?
+                    <br>
+                    <button>Cancel</button>
+                    <button>OK</button>
+                </div>
+            </div> -->
+
+        </div>
+
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+            integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+            integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+            crossorigin="anonymous"></script>
+        <script src="./js/entities/card.js"></script>
+        <script src="./js/entities/board.js"></script>
+        <script src="./js/game.js"></script>
+        <script src="./js/main.js"></script>
 </body>
 
 </html>
