--- a/week10/bottle-server/static/people.html
+++ b/week10/bottle-server/static/people.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2>People List:</h2>
+    <h2>Random A Person:</h2>
     <div id="peopleList"></div>
     <script>
         function start(){
